<?xml version="1.0"?>
<package>
  <name>gvac_visualize</name>
  <version>0.0.0</version>
  <description>RVIZ files for gvac</description>

  <maintainer email="gvac@todo.todo">todo</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>

  </export>
</package>
